# Politic-One-Page

./: Politcal_Anki.md  README.md  史纲.tsv  政治 新一页纸.txt  新思想及其他.tsv  马原+史纲.txt  马原.tsv  马原重排.txt
nanshan/: .gitignore  prd.md  scraper.py
nanshan/.github/workflows/: build_and_release.yml
nanshan/errorTK/: PLAN.md  prd.md  run.sh
nanshan/errorTK/backend/: data_manager.py  interactive_cli.py  requirements.txt  scraper.py
nanshan/errorTK/backend/data/: errors.json  notes.json
nanshan/errorTK/backend/errorTK/backend/data/: errors.json
nanshan/errorTK/tui/: Cargo.toml  keymap.toml
nanshan/errorTK/tui/src/: main.rs
nanshan/famousTk/: scraper.py
