[package]
name = "errortk-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
ratatui = "0.29"
crossterm = "0.27"
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.19"
toml = "0.8"
unicode-width = "0.1"
tui-textarea = "0.7"
regex = "1"
